<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/buttonback2"
        android:layout_width="@dimen/imagesize1"
        android:layout_height="@dimen/imagesize1"
        android:layout_marginStart="@dimen/marginsize2"
        android:layout_marginTop="@dimen/marginsize2"
        android:background="@android:drawable/ic_menu_revert"
        app:backgroundTint="@color/cardview_dark_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/setupMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginsize1"
        android:layout_marginEnd="@dimen/marginsize2"
        android:text="@string/setupMenu"
        android:textSize="@dimen/textsize2"
        app:layout_constraintBaseline_toBaselineOf="@id/buttonback2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonback2" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginsize2"
        android:layout_marginTop="@dimen/marginsize3"
        android:layout_marginEnd="@dimen/marginsize2"
        android:text="@string/switch1"
        android:textAlignment="textEnd"
        android:textSize="@dimen/textsize3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setupMenu" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginsize2"
        android:layout_marginTop="@dimen/marginsize1"
        android:layout_marginEnd="@dimen/marginsize2"
        android:text="@string/switch2"
        android:textAlignment="textEnd"
        android:textSize="@dimen/textsize3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />
</androidx.constraintlayout.widget.ConstraintLayout>